--- a/arrays.html
+++ b/arrays.html
@@ -6,6 +6,16 @@
     <title>htmlTemplate</title>
 </head>
 <body>
+    <div class="header">
+        <nav class="navbar">
+            <div class="logo">
+                <img src="" alt="logo-image">
+                <p class="logotext">LOGO.COM</p>
+            </div>
+            
+
+        </nav>
+    </div>
     
 </body>
 </html>
