--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -10,7 +10,7 @@
         <nav class="navbar">
             <div class="logo">
                 <img src="" alt="logo-image">
-                <p class="logotext">LOGO.COM</p>
+                <p class="logotext">Home</p>
             </div>
             
 
